@@ -1,5 +1,5 @@
 /*
- * $Id: ttkDecls.h,v 1.12 2010/02/05 21:33:14 jenglish Exp $
+ * $Id: ttkDecls.h,v 1.13 2010/06/22 07:41:17 nijtmans Exp $
  *
  * This file is (mostly) automatically generated from ttk.decls.
  */
@@ -139,7 +139,7 @@ typedef struct TtkStubs {
     int magic;
     int epoch;
     int revision;
-    struct TtkStubHooks *hooks;
+    const struct TtkStubHooks *hooks;
 
     Ttk_Theme (*ttk_GetTheme) (Tcl_Interp *interp, const char *name); /* 0 */
     Ttk_Theme (*ttk_GetDefaultTheme) (Tcl_Interp *interp); /* 1 */
@@ -150,17 +150,17 @@ typedef struct TtkStubs {
     Ttk_ElementClass * (*ttk_RegisterElement) (Tcl_Interp *interp, Ttk_Theme theme, const char *elementName, Ttk_ElementSpec *elementSpec, void *clientData); /* 6 */
     int (*ttk_RegisterElementFactory) (Tcl_Interp *interp, const char *name, Ttk_ElementFactory factoryProc, void *clientData); /* 7 */
     void (*ttk_RegisterLayout) (Ttk_Theme theme, const char *className, Ttk_LayoutSpec layoutSpec); /* 8 */
-    void (*reserved9)(void);
+    void *reserved9;
     int (*ttk_GetStateSpecFromObj) (Tcl_Interp *interp, Tcl_Obj *objPtr, Ttk_StateSpec *spec_rtn); /* 10 */
     Tcl_Obj * (*ttk_NewStateSpecObj) (unsigned int onbits, unsigned int offbits); /* 11 */
     Ttk_StateMap (*ttk_GetStateMapFromObj) (Tcl_Interp *interp, Tcl_Obj *objPtr); /* 12 */
     Tcl_Obj * (*ttk_StateMapLookup) (Tcl_Interp *interp, Ttk_StateMap map, Ttk_State state); /* 13 */
     int (*ttk_StateTableLookup) (Ttk_StateTable map[], Ttk_State state); /* 14 */
-    void (*reserved15)(void);
-    void (*reserved16)(void);
-    void (*reserved17)(void);
-    void (*reserved18)(void);
-    void (*reserved19)(void);
+    void *reserved15;
+    void *reserved16;
+    void *reserved17;
+    void *reserved18;
+    void *reserved19;
     int (*ttk_GetPaddingFromObj) (Tcl_Interp *interp, Tk_Window tkwin, Tcl_Obj *objPtr, Ttk_Padding *pad_rtn); /* 20 */
     int (*ttk_GetBorderFromObj) (Tcl_Interp *interp, Tcl_Obj *objPtr, Ttk_Padding *pad_rtn); /* 21 */
     int (*ttk_GetStickyFromObj) (Tcl_Interp *interp, Tcl_Obj *objPtr, Ttk_Sticky *sticky_rtn); /* 22 */
@@ -177,10 +177,10 @@ typedef struct TtkStubs {
     Ttk_Box (*ttk_ExpandBox) (Ttk_Box b, Ttk_Padding p); /* 33 */
     Ttk_Box (*ttk_PlaceBox) (Ttk_Box *cavity, int w, int h, Ttk_Side side, Ttk_Sticky sticky); /* 34 */
     Tcl_Obj * (*ttk_NewBoxObj) (Ttk_Box box); /* 35 */
-    void (*reserved36)(void);
-    void (*reserved37)(void);
-    void (*reserved38)(void);
-    void (*reserved39)(void);
+    void *reserved36;
+    void *reserved37;
+    void *reserved38;
+    void *reserved39;
     int (*ttk_GetOrientFromObj) (Tcl_Interp *interp, Tcl_Obj *objPtr, int *orient); /* 40 */
 } TtkStubs;
 
